Polished Up Code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./criteria/css/style.css">
     <title>Search Engine Optimization | Horisean - Homepage</title>
  </head>
 
@@ -26,7 +26,7 @@
 
     <img 
       class="hero"
-      src="./assets/images/search-engine-optimization.jpg" 
+      src="./criteria/images/search-engine-optimization.jpg" 
       alt="A group of people having meeting in a conference room"
     />
 
@@ -34,7 +34,7 @@
     <main class="content">
       <article class="topic" id="search-engine-optimization">
         <img
-          src="./assets/images/search-engine-optimization">
+          src="./criteria/images/search-engine-optimization">
           alt="A work desk showing the concept of Search Engine Optimization (SE0)"
           class="float-left"
         />
@@ -47,7 +47,7 @@
       </article>
       <article class="topic"  id="social-media-marketing">
             <img 
-              src="./assets/images/social-media-marketing.jpg" class="float-left"
+              src="./criteria/images/social-media-marketing.jpg" class="float-left"
               alt="A desk showing the different forms of Social Media"
               Class="float-left"
         />
@@ -64,14 +64,14 @@
     <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./criteria/images/lead-generation.png" />
         <p>
           Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
         </p>
     </div>
     <div class="benefit-brand">
       <h3>Brand Awareness</h3>
-      <img src="./assets/images/brand-awareness.png" />
+      <img src="./criteria/images/brand-awareness.png" />
       <p>
         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
       </p>
@@ -79,7 +79,7 @@
     <div class="benefit-cost">
       <h3>Cost Management</h3>
       <img 
-        src="./assets/images/cost-management.png"
+        src="./criteria/images/cost-management.png"
         alt="A gear with dollar signs"
       />
       <p>
