another polishing up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management"
+                      >Online Reputation Management</a
+                    >
                 </li>
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
@@ -34,7 +36,7 @@
     <main class="content">
       <article class="topic" id="search-engine-optimization">
         <img
-          src="./criteria/images/search-engine-optimization">
+          src="./criteria/images/search-engine-optimization.jpg">
           alt="A work desk showing the concept of Search Engine Optimization (SE0)"
           class="float-left"
         />
@@ -45,12 +47,27 @@
             home. Search Engine Optimization (SEO) allows you to increase 
         </p>
       </article>
-      <article class="topic"  id="social-media-marketing">
+      <article class="topic"  id="online-reputation-management">
             <img 
-              src="./criteria/images/social-media-marketing.jpg" class="float-left"
+              src="./criteria/images/social-media-marketing.jpg" 
               alt="A desk showing the different forms of Social Media"
               Class="float-left"
         />
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative. Social
+          media allows anyone with an internet connection to say whatever they
+          want about your business. Online Reputation Management gives you the
+          control over what potential customers see when they search for your
+          business.
+        </p>
+      </article>
+      <article class="topic" id="social-media-marketing">
+        <img
+          src="./criteria/images/social-media-marketing.jpg"
+          alt="A desk showing the different forms of Social Media"
+          class="float-left"
+        /> 
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
