anddd another polishing up

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
  </head>
 
  <body>
+    <!-- The Banner of the page-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- The navigation links that route to the main content -->
         <nav>
             <ul>
                 <li>
@@ -26,6 +28,7 @@
         </nav>
     </header>
 
+    <!-- This is the image, set at the top of the page -->
     <img 
       class="hero"
       src="./criteria/images/search-engine-optimization.jpg" 
@@ -33,6 +36,7 @@
     />
 
 
+    <!-- These are the main content of the page -->
     <main class="content">
       <article class="topic" id="search-engine-optimization">
         <img
@@ -78,6 +82,7 @@
       </article>
     </main>
     
+    <!-- These are the contents to the right of the page -->
     <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
