--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./criteria/css/style.css">
     <title>Search Engine Optimization | Horisean - Homepage</title>
- </head>
+  </head>
 
- <body>
+  <body>
     <!-- The Banner of the page-->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- The navigation links that route to the main content -->
-        <nav>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management"
-                      >Online Reputation Management</a
-                    >
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
+      <h1>Hori<span class="seo">seo</span>n</h1>
+      <!-- The navigation links that route to the main content -->
+      <nav>
+        <ul>
+          <li>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+          </li>
+          <li>
+            <a href="#online-reputation-management"
+              >Online Reputation Management</a
+            >
+          </li>
+          <li>
+            <a href="#social-media-marketing">Social Media Marketing</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <!-- This is the image, set at the top of the page -->
@@ -52,10 +52,10 @@
         </p>
       </article>
       <article class="topic"  id="online-reputation-management">
-            <img 
-              src="./criteria/images/social-media-marketing.jpg" 
-              alt="A desk showing the different forms of Social Media"
-              Class="float-left"
+        <img 
+          src="./criteria/images/social-media-marketing.jpg" 
+          alt="A desk showing the different forms of Social Media"
+          class="float-left"
         />
         <h2>Online Reputation Management</h2>
         <p>
