--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
       alt="A group of people having meeting in a conference room"
     />
 
-
     <!-- These are the main content of the page -->
     <main class="content">
       <article class="topic" id="search-engine-optimization">
         <img
-          src="./criteria/images/search-engine-optimization.jpg">
+          src="./criteria/images/search-engine-optimization.jpg"
           alt="A work desk showing the concept of Search Engine Optimization (SE0)"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
         <p>
-            The dominance of mobile internet use means that users are searching
-            for the right business as they travel, shop, or sit on their couch at
-            home. Search Engine Optimization (SEO) allows you to increase 
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch at
+          home. Search Engine Optimization (SEO) allows you to increase your
+          visibility and find the right customers for your business.
         </p>
       </article>
       <article class="topic"  id="online-reputation-management">
         <img 
           src="./criteria/images/social-media-marketing.jpg" 
-          alt="A desk showing the different forms of Social Media"
-          class="float-left"
+          alt="Someone using a laptop that is showing a graphed labeled 'Reputation' that is increasing"
+          class="float-right"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -93,7 +93,7 @@
     </div>
     <div class="benefit-brand">
       <h3>Brand Awareness</h3>
-      <img src="./criteria/images/brand-awareness.png" />
+      <img src="./criteria/images/brand-awareness.png" alt="Light-bulb" />
       <p>
         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
       </p>
