--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- This is the image, set at the top of the page -->
     <img 
       class="hero"
-      src="./criteria/images/search-engine-optimization.jpg" 
-      alt="A group of people having meeting in a conference room"
+      src="./criteria/images/digital-marketing-meeting.jpg" 
+      alt="A group of people having a meeting in a conference room"
     />
 
     <!-- These are the main content of the page -->
@@ -53,7 +53,7 @@
       </article>
       <article class="topic"  id="online-reputation-management">
         <img 
-          src="./criteria/images/social-media-marketing.jpg" 
+          src="./criteria/images/online-reputation-management.jpg" 
           alt="Someone using a laptop that is showing a graphed labeled 'Reputation' that is increasing"
           class="float-right"
         />
@@ -86,16 +86,18 @@
     <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./criteria/images/lead-generation.png" />
+        <img src="./criteria/images/lead-generation.png" alt="A funnel" />
         <p>
-          Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+          Inbound strategies for lead generation require less work for your 
+          business, bringing customers directly to your website.
         </p>
     </div>
     <div class="benefit-brand">
       <h3>Brand Awareness</h3>
       <img src="./criteria/images/brand-awareness.png" alt="Light-bulb" />
       <p>
-        Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+        Users find your business through paid and organic searches, increasing 
+        the search ranking and visibility for your business.
       </p>
     </div>
     <div class="benefit-cost">
@@ -105,11 +107,11 @@
         alt="A gear with dollar signs"
       />
       <p>
-        As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+        As the search ranking for your business increases, your advertising 
+        costs decrease, and you no longer need to advertise your page.
       </p>
     </div>
   </aside>
-    
     
   <footwer class="footer">
     <h2>Made with ❤️️ by Horiseon</h2>
